#53 #57 feature minigame (guessgame) Neues GUESS_GAME Minigame mit server-seitigem Timer und Auswertung. Spieler schicken ihre Schätzung per SUBMIT_GUESS, der Gewinner wird nach Ablauf der Zeit oder wenn alle Spieler eingereicht haben ermittelt. Neues Feld timerDurationSeconds sorgt dafür, dass alle Spieler den Countdown einheitlich bei 30   Sekunden starten, unabhängig von der Systemuhr des Geräts.